[package]
name = "bitcoin-node-query"
version = "0.1.2"
edition = "2021"
description = "Query your bitcoin node"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoind-request = "0.1.4"
jsonrpc = "0.13.0"
chrono = "0.4"
